[tool.poetry]
name = "jsonpathfinder"
version = "0.1.0"
description = ""
authors = ["leegohi <10923930+leegohi@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "./*.py" },
]
[tool.poetry.dependencies]
python = ">=3.7,<4"
pywin32 = { version = ">=0", markers = "sys_platform == 'win32'" }
[tool.poetry.scripts]
jsonpathfinder="jsonpathfinder:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
